# skeleton-databricks

./: .env.dist  .gitignore  README.md  dbx_poetry.py  decorators_indent_check.sh  env-init.sh  environment.yml  pyproject.toml
.cicd/: master-pipeline.yml
.cicd/templates/: build.yml  daipe-cd.yml  daipe-ci.yml  datafactory-cd.yml  deploy.yml
.cicd/variables/: variables.yml
.github/workflows/: branch_delete.yml  build.yml  codeql-analysis.yml  create-or-update-jobs-prod.yml  create-or-update-jobs-test.yml  create_templates.yml  deploy.yml  dev.yml  main.yml  prod.yml  run_command.yml  test.yml
bootstrap/: bootstrap_base.py  install_benvy.py
datafactory/deployment/: config-dev.json  config-prod.json
datafactory/factory/: __factory__.json
src/: daipe.py
src/__myproject__/: ContainerTest.py
src/__myproject__/_config/: config.yaml  config_dev.yaml  config_prod.yaml  config_rc.yaml  config_test.yaml  jobs.yaml  orchestration.yaml
src/__myproject__/_config/bundles/: databricksbundle.yaml  datalakebundle.yaml  dbxdeploy.yaml  featurestorebundle.yaml  jobsbundle.yaml
src/__myproject__/_export/: clickhouse_export.py  p360_export.py
src/__myproject__/_orchestration/: clickhouse_export.py  orchestrator.py
src/__myproject__/_setup/: init_target_store.py
src/__myproject__/_templates/: feature_notebook.py
src/__myproject__/app/: bootstrap.py  install_master_package.py
test/: test.py
tools/: dbx_jobs.py  poetry.py  pylint.py
tools/_jobs/: test
tools/feature_store/: delete_features.py  explore_features.py
tools/poetry_utils/: unify_imports.py
