[tool.poetry]
name = "t__myproject__t"
version = "1.0"
description = "Daipe project skeleton for Databricks"
readme = "README.md"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml", "*.json"]

packages = [
    { include = "__myproject__", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
pandas = "1.1.3"
numpy = "1.19.2"
injecta = "0.10.*"
databricks-bundle = "^1.0"
datalake-bundle = "^1.0"

[tool.poetry.dev-dependencies]
databricks-connect = "^7.3"
black = "^20.8b1"
poethepoet = ">=0.9.0,<1.0.0"
flake8 = "3.7.*"
pep8-naming = ">=0.11.1,<1.0.0"
pyfony-core = "0.8.*"
pycodestyle_magic = "^0.5"
dbx-deploy = "^1.0"

[pyfony.bootstrap]
root_module_name = "__myproject__"
allowed_environments = ["dev", "test", "prod"]

[tool.black]
line-length = 140

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
flake8 = "flake8 --ignore=E501,F403,F405,W503 src"
container-check = "python src/__myproject__/ContainerTest.py"
