[tool.poetry]
name = "t__myproject__t"
version = "1.0"
description = "Daipe Project"

authors = [
    "Datasentics Daipe Team"
]

[tool.poetry.dependencies]
# DBR 9.1 python
python = "3.8.10"

# DBR 9.1 dependencies
pip = "21.0.1"
setuptools = "52.0.0"
wheel = "0.36.2"
boto3 = "1.16.7"
chardet = "4.0.0"
idna = "2.10"
ipython-genutils = "0.2.0"
joblib = "1.0.1"
kiwisolver = "1.3.1"
numpy = "1.19.2"
patsy = "0.5.1"
Pillow = "8.2.0"
prompt-toolkit = "3.0.17"
ptyprocess = "0.7.0"
python-dateutil = "2.8.1"
requests = "2.25.1"
scikit-learn = "0.24.1"
statsmodels = "0.12.2"
tornado = "6.1"
urllib3 = "1.25.11"
appdirs = "1.4.4"
botocore = "1.19.7"
cycler = "0.10.0"
decorator = "5.0.6"
facets-overview = "1.0.0"
ipykernel = "5.3.4"
jedi = "0.17.2"
jupyter-client = "6.1.12"
koalas = "1.8.1"
pandas = "1.2.4"
pexpect = "4.8.0"
protobuf = "3.17.2"
pyarrow = "4.0.0"
pyparsing = "2.4.7"
pytz = "2020.5"
requests-unixsocket = "0.2.0"
scipy = "1.6.2"
six = "1.15.0"
tenacity = "6.2.0"
traitlets = "5.0.5"
virtualenv = "20.4.1"
backcall = "0.2.0"
certifi = "2020.12.5"
Cython = "0.29.23"
distlib = "0.3.2"
filelock = "3.0.12"
ipython = "7.22.0"
jmespath = "0.10.0"
jupyter-core = "4.7.1"
matplotlib = "3.4.2"
parso = "0.7.0"
pickleshare = "0.7.5"
plotly = "5.1.0"
Pygments = "2.8.1"
pyzmq = "20.0.0"
s3transfer = "0.3.7"
seaborn = "0.11.1"
ssh-import-id = "5.10"
threadpoolctl = "2.1.0"
wcwidth = "0.2.5"
zipp = "3.4.1"
importlib-metadata = "3.10.0"
distro = "1.4.0"

# Custom dependencies
injecta = "0.10.*"
databricks-bundle = "^1.3.1"
datalake-bundle = "^1.2.2"
daipe-core = "^1.3"

[tool.poetry.dev-dependencies]
databricks-connect = { url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz" }
poethepoet = ">=0.9.0,<1.0.0"
flake8 = "3.7.*"
pep8-naming = ">=0.11.1,<1.0.0"
pycodestyle_magic = "^0.5"
pyfony-core = "^0.8.2"
dbx-deploy = "^1.3.1"
lineage-bundle = "^1.0.2"
jobs-bundle = "^0.5.1"

[pyfony.bootstrap]
root_module_name_search_exclude=["daipe"]

[tool.poe.tasks]
flake8 = "flake8 --ignore=E501,E305,E302,F403,F405,W503 src"
container-check = { shell = "python src/$(ls -I daipe.py src)/ContainerTest.py" }
